<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Semaphore\'16</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="coordi">Co-Ordinator</string>
    <string name="contributer">Contributers</string>
    <string name="contri_text">Sudarshan Karanth</string>
    <string name="about_string">
        <![CDATA[ <html>
        <head>
        <style>
        body{
        color: white;
        }
        </style>
        </head>
        <body style="background-color:#FF4081;">
        <h2 align="center">Semaphore</h2>
        <hr></hr>
        <p style="text-align:justify; color:gray;">
        The word \"Semaphore\" is the derived from the Greek words \"sema\" meaning \"sign\" and \"phore\" means \"bear\".
        The slogan,  \"Bearing the sign of excellence\" aptly describes our desire in organizing this event.
        The department emphasizes on student activities and encourages talent through a Student Association of MCA (SAMCA).
        Semphore\'16 is one such activity which aims to bring out the hidden talents of the students by providing a platform for
        the youth to exchange the information and enhance their IT skills.
        </p>
      </body>
      </html>]]>

        </string>
    <string name="btn_about_title">About</string>
    <string name="btn_event_title">Events</string>
    <string name="btn_result_title">Results</string>
    <string name="btn_reg_title">Regestration</string>
    <string name="btn_gallary_title">Gallary</string>
    <string name="btn_schedule_title">Schedule</string>
    <string name="btn_visit_title">Visit Site</string>
    <string name="gallary">Gallary</string>
    <string name="about">About</string>
    <string name="result">Results</string>
    <string name="event">Events</string>
    <string name="cod_contact_1">+91 85539 73266</string>
    <string name="cod_contact_2">+91 77604 02436</string>
    <string name="cod_name_1">Sudarshan</string>
    <string name="cod_name_2">Harsha</string>
    <string name="web_contact_1">+91 89711 17136</string>
    <string name="web_contact_2">+91 99646 83081</string>
    <string name="web_name_1">Alia</string>
    <string name="web_name_2">Ansaruddin</string>
    <string name="app_contact_1">+91 72049 81838</string>
    <string name="app_contact_2">+91 96202 89642</string>
    <string name="itmgr_contact_1">+91 73536 80933</string>
    <string name="itmgr_contact_2">+91 94838 71877</string>
    <string name="treasure_contact_1">+91 77600 91386</string>
    <string name="treasure_contact_2">+91 90088 43409</string>
    <string name="treasure_name_1">Veena</string>
    <string name="treasure_name_2">Ashish</string>
    <string name="gaming_contact_1">+91 98802 05198</string>
    <string name="gaming_contact_2">+91 97289 82056</string>
    <string name="gaming_name_1">Nandish</string>
    <string name="gaming_name_2">Rakesh</string>
    <string name="cultural_contact_1">+91 77602 88186</string>
    <string name="cultural_contact_2">+91 80509 11308</string>
    <string name="ice_contact_1">+91 81054 88527</string>
    <string name="ice_contact_2">+91 80953 18731</string>
    <string name="app__0">Sunil Shenoy</string>
    <string name="app__1">Nisha Ammunje</string>
    <string name="app_1">+91 96325 34595</string>
    <string name="app_2">+91 77951 53673</string>
    <string name="app_name_1">Sachin</string>
    <string name="app_name_2">Vicky</string>
    <string name="itmgr_name_1">Divya</string>
    <string name="itmgr_name_2">Dilip</string>
    <string name="itdebate_name_1">Shruthi</string>
    <string name="itdebate_name_2">Cleeta</string>
    <string name="itdebate_contact_1">+91 99007 71586</string>
    <string name="itdebate_contact_2">+91 89741 40501</string>
    <string name="mad_name_1">Veeksha</string>
    <string name="mad_name_2">Ullas</string>
    <string name="mad_contact_1">+91 80502 35481</string>
    <string name="mad_contact_2">+91 80503 78705</string>
    <string name="img_name_1">Vinayak</string>
    <string name="img_name_2">Hemalatha</string>
    <string name="img_contact_1">+91 81057 68701</string>
    <string name="img_contact_2">+91 81474 34293</string>
    <string name="paper_name_1">Shruthi, Shifali</string>
    <string name="paper_name_2">Deepak          </string>
    <string name="paper_contact_1">+91 81975 97931</string>
    <string name="paper_contact_2">+91 90080 95118</string>
    <string name="itquiz_name_1">Joshna</string>
    <string name="itquiz_name_2">Abhishek</string>
    <string name="itquiz_contact_1">+91 82770 62723</string>
    <string name="itquiz_contact_2">+91 88928 91146</string>
    <string name="cultural_name_1">Priya</string>
    <string name="cultural_name_2">Anupama</string>
    <string name="ice_name_1">Amra</string>
    <string name="ice_name_2">Chaitra</string>
    <string name="dat">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">Semaphore2k16</h1>
        <p style="text-align:center;">Bearing the sign of excellence</p>
        <hr></hr>
        <p style="text-align:justify;">
        Semaphore is the South India Level Inter-collegiate Tech-fest organized by MCA Department NMAMIT Nitte. As many years
        the event promises to be funfilled with various events that includes coding/games/quiz/dance etc. We cordially
        invite you to be a part of Semaphore.</br>
        Come on.. join hands with us.. to make it success.</br>
        <p> </br></p>

        (Swipe from left to right to see the event list.)
        </p>
      </body>
      </html>]]>
    </string>
    <string name="coding">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">SAMHITA</h1>
        <p style="text-align:center;">Code won\'t lie.. Comments may....!</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.Two participants from each team.</br>
        2.Languages to be known are C/C++ ,JAVA. </br>
        </p>
      </body>
      </html>]]>
    </string>
    <string name="App_development">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">AAVEDAHA PRAGATHI</h1>
        <p style="text-align:center;">Build The Best App.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.Two participants from each team.</br>
        2.Languages to be known are CSS,ASP.net with C#,JQuery. </br>
        3.IDE provided: visual studio10.,SQLSERVER 08.</br>
        4.Topic will be provided on spot.</br>
        </p>
      </body>
      </html>]]>
    </string>
    <string name="IT_DEBATE">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">VAAK SAMARA</h1>
        <p style="text-align:center;">Knock Your Brains And Articulate Your Thoughts.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.Two members from each College.</br>
        2.Topics will be given 1 hour prior to the debate round.</br>
        </p>
      </body>
      </html>]]>
    </string>
    <string name="Best_IT_Manager">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">UTTAMA PRABHANDHAKA</h1>
        <p style="text-align:center;">Crave Your Brainstrom To Handle Your Stress.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.One participant from each team</br>
        2.The student participating in IT Manager is not supposed to participate in Any other event</br>
          except SAMSKRUTHIKA (TechFun) and HIMA KHANDANA(Ice Breaker).</br>
        3.Participant is not supposed to reveal his code after registration.</br>
        4.Pen Drive, dongle and laptops are allowed.</br>
        5.Judges decision will be final. </br>
     </p>
      </body>
      </html>]]>
    </string>
    <string name="IT_Quiz">
       <![CDATA[ <html>
        <head>
        <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">RASPARASHNA</h1>
        <p style="text-align:center;">The Longer You Wait,The Harder It Gets.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.Two members must form a team from each college.</br>
        2.The decision of the Quiz master will be final and will not be subjected to any change.</br>
        3.The participants shall not be allowed to use mobile or other electronic device at the time of event</br>
     </p>
      </body>
      </html>]]>
    </string>
    <string name="Paper_Presentation">
       <![CDATA[ <html>
        <head>
         <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">PATRIKA PARISHODHANA</h1>
        <p style="text-align:center;">Boggle the Minds Of Your Spectators With Yous Presentation.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.One participant from each team.</br>
        2.Participant must get their laptop to do presentation.</br>
        3.Participants are requested to submit their presentation copy prior to 2-3days before the event take place without fail</br>
     </p>
      </body>
      </html>]]>
    </string>
    <string name="Mad_Ad">
       <![CDATA[ <html>
        <head>
           <style>
        body{
        color:white;
        background-color:gray;
        }
        </style>
        </head>
        <body>
        <h1 style="text-align:center;">MAADA VIGYAPANAM</h1>
        <p style="text-align:center;">Think Outside The Box Because It\'s A Minute To Advertise It.</p>
        <h2>Rules:</h2>
        <hr></hr>
        <p style="text-align:justify;">
        1.Four Participants from each team, two for the first round and four for the second round.</br>
        2.The advertisement prepared by the contestants must not contain  any obscene words/any subject that hurts the feelings of culture/language/religion/region.</br>
        3.Participants are requested to submit their presentation copy prior to 2-3days before the event take place without fail</br>
     </p>
      </body>
      </html>]]>
    </string>
    <string name="nav_coding_title">SAMHITA</string>
    <string name="nav_web_title">AAVEDANA PRAGATHI</string>
    <string name="nav_app_title">JAALA-YOJANA</string>
    <string name="nav_itmgr_title">UTTAMA PRABHANDHAKA</string>
    <string name="nav_trsr_title">NIDHI SHODHAN</string>
    <string name="nav_itdebate_title">VAAK-SAMARA</string>
    <string name="nav_gaming_title">DHYUTA</string>
    <string name="nav_mad_title">MAADA VIGYAPANAM</string>
    <string name="nav_img_title">CHITRAMUDRIKA PARISHKARANA</string>
    <string name="nav_paper_title">PATRIKA PARISHODHANA</string>
    <string name="nav_itquiz_title">RASAPRASHNA</string>
    <string name="nav_cultural_title">SAMSKRUTHIKA</string>
    <string name="nav_ice_title">HIMA KHANDANA</string>
</resources>