<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mitech.semaphore2k16.MainActivity"
    >

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <WebView
            android:layout_margin="10dp"
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </WebView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Contacts"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            />
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:id="@+id/contact1_name"
            android:layout_height="wrap_content"
            android:text="@string/app__0"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:id="@+id/contact1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_1"/>
        </LinearLayout>



        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:id="@+id/contact2_name"
                android:layout_height="wrap_content"
                android:text="@string/app__1"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:id="@+id/contact2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_2"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>
