<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"

    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mitech.semaphore2k16.Welcome"
    tools:showIn="@layout/activity_welcome">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <ImageButton
            android:id="@+id/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:src="@mipmap/ic_launcher_info"/>

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_about_title"/>

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageButton
        android:padding="5dp"
        android:id="@+id/btn_event"
        android:layout_margin="10dp"
        android:layout_width="125dp"
        android:background="@drawable/round_btn"
        android:src="@mipmap/ic_launcher_event"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_event_title"/>
    </LinearLayout>


        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageButton
        android:padding="5dp"
        android:src="@mipmap/ic_launcher_res"
        android:id="@+id/btn_result"
        android:layout_margin="10dp"
        android:layout_width="125dp"
        android:background="@drawable/round_btn"
        android:layout_height="wrap_content" />


        <TextView
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_result_title"/>
    </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:padding="5dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageButton
            android:padding="5dp"
            android:id="@+id/schedule_btn"
            android:src="@mipmap/ic_launcher_sche"
            android:layout_margin="10dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"

            />
            <TextView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_schedule_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageButton
            android:padding="5dp"
            android:src="@mipmap/ic_launcher_reg"
            android:id="@+id/btn_reg"
            android:background="@drawable/round_btn"
            android:layout_margin="10dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            />

            <TextView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg_title"/>
        </LinearLayout>

    </LinearLayout>









<!--
    <LinearLayout
        android:padding="5dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:padding="5dp"
                android:src="@mipmap/ic_launcher_reg"
                android:layout_margin="10dp"
                android:layout_width="125dp"
                android:id="@+id/btn_visit"
                android:layout_height="wrap_content"
                android:background="@drawable/round_btn"

                />
            <TextView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_schedule_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:padding="5dp"
                android:src="@mipmap/ic_launcher_reg"
                android:id="@+id/btn_gallary"
                android:background="@drawable/round_btn"
                android:layout_margin="10dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
               />

            <TextView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg_title"/>
        </LinearLayout>

    </LinearLayout>-->
</LinearLayout>
